--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header class="topbar">
     <div class="container">
       <a class="brand" href="#inicio">
-        <img src="images/logo-omax.png" alt="OMAX" class="logo">
+        <img src="logo-omax.png" alt="OMAX" class="logo">
         <span class="brand-name">MUNDO OMAX</span>
       </a>
       <nav class="nav">
@@ -34,7 +34,7 @@
         </div>
       </div>
       <div class="hero-art">
-        <img src="images/logo-omax.png" alt="Logo OMAX grande">
+        <img src="logo-omax.png" alt="Logo OMAX grande">
       </div>
     </div>
   </main>
@@ -86,6 +86,7 @@
 </body>
 </html>
 <!-- Arquivo obsoleto, usar index.html -->
+
 
 
 
