--- a/index.html
+++ b/index.html
@@ -53,40 +53,4 @@
       <p>Produtos selecionados com critério: design, performance e confiabilidade. Em breve, catálogo completo.</p>
       <div class="cards">
         <article class="card">
-          <h3>Produto destaque</h3>
-          <p>Descrição breve e direta. Link para WhatsApp ou página do produto.</p>
-          <a class="btn btn-secondary" href="https://wa.me/55DDDNÚMERO?text=Quero%20o%20Produto%20Destaque" target="_blank" rel="noopener">Quero saber mais</a>
-        </article>
-        <article class="card">
-          <h3>Assinatura VIP</h3>
-          <p>Acesso antecipado a recomendações e ofertas exclusivas.</p>
-          <a class="btn btn-secondary" href="#contato">Entrar na lista</a>
-        </article>
-      </div>
-    </div>
-  </section>
-
-  <section id="contato" class="section">
-    <div class="container">
-      <h2>Contato</h2>
-      <ul class="list">
-        <li><strong>YouTube:</strong> <a href="https://www.youtube.com/@SeuCanal" target="_blank" rel="noopener">@SeuCanal</a></li>
-        <li><strong>WhatsApp:</strong> <a href="https://wa.me/55DDDNÚMERO" target="_blank" rel="noopener">Iniciar conversa</a></li>
-        <li><strong>Instagram:</strong> <a href="https://instagram.com/SeuInsta" target="_blank" rel="noopener">@SeuInsta</a></li>
-      </ul>
-    </div>
-  </section>
-
-  <footer class="footer">
-    <div class="container footer-grid">
-      <small>© MUNDO OMAX — presença, precisão e estilo.</small>
-      <small><a href="#inicio">Voltar ao topo</a></small>
-    </div>
-  </footer>
-</body>
-</html>
-<!-- Arquivo obsoleto, usar index.html -->
-
-
-
-
+          <h3>Produto
