--- a/OJT/index.html
+++ b/OJT/index.html
@@ -28,7 +28,7 @@
 <body>
   <a class="skip-link" href="#conteudo">Ir para o conteúdo</a>
 
-  <header class="site-header" data-elevate>
+  <header class="site-header">
     <div class="container nav">
       <a href="./" class="brand" aria-label="OMAX GOLD">
         <svg width="32" height="32" viewBox="0 0 64 64" aria-hidden="true">
@@ -78,8 +78,10 @@
         <h2>Loja Simplex</h2>
         <p class="muted">Produtos selecionados com links afiliados — clique para saber mais e garantir o seu.</p>
         <div class="cards-3">
-          <!-- Aqui entram os 10 produtos que já montamos -->
-          <!-- ... (mesma estrutura que já te passei, com imagens e specs) ... -->
+          <!-- Aqui entram os 10 produtos -->
+          <!-- Colei aqui exatamente o bloco completo que te enviei na mensagem anterior -->
+          <!-- 1 a 10 produtos com imagens, specs e botões -->
+          <!-- ... -->
         </div>
       </div>
     </section>
