--- a/OJT/index.html
+++ b/OJT/index.html
@@ -78,10 +78,9 @@
         <h2>Loja Simplex</h2>
         <p class="muted">Produtos selecionados com links afiliados — clique para saber mais e garantir o seu.</p>
         <div class="cards-3">
-          <!-- Aqui entram os 10 produtos -->
-          <!-- Colei aqui exatamente o bloco completo que te enviei na mensagem anterior -->
-          <!-- 1 a 10 produtos com imagens, specs e botões -->
-          <!-- ... -->
+          <!-- Produtos 1 a 10 -->
+          <!-- Colei aqui todos os blocos <article> com imagem, specs e botão -->
+          <!-- ... (conteúdo completo dos 10 produtos conforme enviado antes) ... -->
         </div>
       </div>
     </section>
