--- a/OJT/index.html
+++ b/OJT/index.html
@@ -78,52 +78,41 @@
         <h2>Loja Simplex</h2>
         <p class="muted">Produtos selecionados com links afiliados — clique para saber mais e garantir o seu.</p>
         <div class="cards-3">
-          <!-- Produtos 1 a 10 -->
-          <!-- Colei aqui todos os blocos <article> com imagem, specs e botão -->
-          <!-- ... (conteúdo completo dos 10 produtos conforme enviado antes) ... -->
-        </div>
-      </div>
-    </section>
+          <!-- Produto 1 -->
+          <article class="card produto">
+            <a href="https://amzn.to/4p3VPmr" target="_blank" rel="noopener">
+              <img src="https://m.media-amazon.com/images/I/61SUj2aKoEL._AC_SX466_.jpg" alt="Apple AirPods Pro 2 (USB‑C) — Branco" loading="lazy">
+            </a>
+            <h3>Apple AirPods Pro (2ª geração)</h3>
+            <p class="muted">Estojo MagSafe USB‑C — Branco</p>
+            <ul class="bullets">
+              <li>Marca: Apple</li>
+              <li>Intra‑auricular</li>
+              <li>Impedância: 16 Ω</li>
+            </ul>
+            <a class="btn btn-primary" href="https://amzn.to/4p3VPmr" target="_blank" rel="noopener">Ver na Loja</a>
+          </article>
 
-    <!-- CONTATO -->
-    <section id="contato" class="section alt">
-      <div class="container grid-2">
-        <div class="card">
-          <h2>Vamos conversar</h2>
-          <p>Mensagem direta — respondemos rápido e vamos ao ponto.</p>
-          <div class="actions">
-            <a class="btn btn-primary" target="_blank" rel="noopener" href="https://wa.me/5521987610546?text=Quero%20conversar%20com%20a%20OMAX">WhatsApp</a>
-            <a class="btn btn-outline" href="mailto:contato@omaxakchei.com?subject=OMAX%20GOLD&body=Oi%2C%20vamos%20conversar%20sobre%20%5Bassunto%5D.">E‑mail</a>
-          </div>
-        </div>
-        <div class="card">
-          <h3>Transparência</h3>
-          <p class="muted">Participamos de programas de afiliados (ex.: Amazon). Podemos receber comissões por compras qualificadas feitas através de nossos links.</p>
-          <p class="muted">Este site não coleta dados pessoais diretamente. Para interações via WhatsApp, e‑mail ou redes sociais, valem as políticas das respectivas plataformas.</p>
-          <p><a href="./termos.html">Termos de Uso</a> • <a href="./privacidade.html">Privacidade</a></p>
-        </div>
-      </div>
-    </section>
-  </main>
+          <!-- Produto 2 -->
+          <article class="card produto">
+            <a href="https://amzn.to/45HwGGI" target="_blank" rel="noopener">
+              <img src="https://m.media-amazon.com/images/I/7169HQ6wzUL._AC_SX466_.jpg" alt="Kindle Paperwhite Signature 32 GB (7&quot;)" loading="lazy">
+            </a>
+            <h3>Kindle Paperwhite Signature 32 GB</h3>
+            <p class="muted">Tela 7", luz autoadaptável, carregamento sem fio</p>
+            <ul class="bullets">
+              <li>Troca de página 25% mais rápida</li>
+              <li>Bateria até 12 semanas</li>
+            </ul>
+            <a class="btn btn-primary" href="https://amzn.to/45HwGGI" target="_blank" rel="noopener">Ver na Loja</a>
+          </article>
 
-  <footer class="site-footer">
-    <div class="container footer-grid">
-      <div class="brand-mini">
-        <svg width="24" height="24" viewBox="0 0 64 64" aria-hidden="true">
-          <rect width="64" height="64" rx="12" fill="#0F4C81"></rect>
-          <text x="50%" y="55%" text-anchor="middle" font-size="34" font-family="Arial" fill="#fff">O</text>
-        </svg>
-        <span>OMAX GOLD</span>
-      </div>
-      <small>© <span id="year"></span> OMAX. Todos os direitos reservados.</small>
-      <nav class="foot-nav" aria-label="Rodapé">
-        <a href="#inicio">Início</a>
-        <a href="#loja-simplex">Loja</a>
-        <a href="#contato">Contato</a>
-      </nav>
-    </div>
-  </footer>
-
-  <script src="./js/scripts.js" defer></script>
-</body>
-</html>
+          <!-- Produto 3 -->
+          <article class="card produto">
+            <a href="https://amzn.to/4mSi0ur" target="_blank" rel="noopener">
+              <img src="https://m.media-amazon.com/images/I/61CKrZWOcrL._AC_SX450_.jpg" alt="SSD Externo Samsung T7 Shield 1 TB" loading="lazy">
+            </a>
+            <h3>SSD Externo Samsung T7 Shield 1 TB</h3>
+            <p class="muted">USB 3.2 Gen2, até 1050 MB/s, IP65</p>
+            <ul class="bullets">
+              <li>
